# PersonalFinanceTrackerProject

./: README.md  data.json  financeTracker.py  main.py  pyproject.toml  replit.nix
ipynbforjupyterlab/: main.ipynb
